syntax = "proto3";

option go_package = "./;proto";


message Req {
  string ping = 1;
}

message Res {
  string pong = 1;
}

message LoginReq {
  string  mobile = 1;
  string  password = 2;
}

message LoginRes{
  string Token = 1;
  int64 expire = 2;
}

message RegisterReq{
  string  mobile = 1;
  string  userName = 2;
  string  password = 3;
  string  avatar = 4;
  string   gender = 5;
}

message RegisterRes {
  string Token = 1;
  int64 expire = 2;
}

message UserInfoReq {
  string id = 1;
}

// model
message UserInfoRes {
    string  id = 1;                // 用户id
    string  avatar = 2;            // 用户头像
    string  userName = 3;          // 昵称
    string  mobile  = 4;            // 手机号码
    int32   status  = 5;           // 是否锁住
    string   gender = 6;
  }

message FindUserReq {
  string userName = 1;
  string mobile = 2;
  repeated string ids = 3;
}


service User {
  rpc Ping(Req) returns (Res);

  rpc Login(LoginReq) returns (LoginRes);

  rpc Register(RegisterReq) returns (RegisterRes);

  rpc GetUserInfo(UserInfoReq) returns (UserInfoRes);

  rpc FindUser(FindUserReq) returns (UserInfoRes);
}